# texstudio_poppler_crash_bug

./: README.md  main.cpp  main_simple.cpp  meson.build  texstudio_poppler_crash_bug.pro
src/: pdfrenderengine.cpp  pdfrenderengine.h  pdfrenderengine_stress_t.cpp  pdfrenderengine_stress_t.h  pdfrendermanager.cpp  pdfrendermanager.h
